--- a/docassemble/tlaKaryna/data/questions/police_compaint_Dec2.yml
+++ b/docassemble/tlaKaryna/data/questions/police_compaint_Dec2.yml
@@ -85,7 +85,7 @@ subquestion: |
  
   **Then**, this service will provide you with useful information and an automatically generated letter to send to the authorities.
  
-  **Finally**, in the "Filing you Complaint Section" you can submit your compaint anonymously (with or without follow-up contact information) or with your name and signature. 
+  **Finally**, in the "Filing you Complaint Section" you can submit your compaint anonymously or with your name and signature. 
  
   **Estimated time for completing this form is 15-35 minutes.**
  
